--- a/partials/header.html
+++ b/partials/header.html
@@ -18,7 +18,7 @@
 </nav>
 
 <button id="contact-toggle" aria-label="Open contact" aria-expanded="false" aria-controls="contact-nav" title="Contact">
-  <img src="img/index/icon_plus.png" alt="">
+  <img src="img/index/icon_plus.svg" alt="">
 </button>
 
 <script>
