oct 31 jde footer

--- a/css/style.css
+++ b/css/style.css
@@ -1487,7 +1487,7 @@ body.project-page .grid-col-9of12 .visual-grid > .project-image {
   font-size: 72px;
 }
 
-.footer-content {
+.next-project-content {
   display: flex;
   align-items: center;
   gap: 24px;
@@ -1498,29 +1498,56 @@ body.project-page .grid-col-9of12 .visual-grid > .project-image {
   color: inherit;
 }
 
-.footer-content {
+.next-project-content {
   display: flex;
   align-items: center;
 }
 
-.footer-content img {
+.next-project-content img {
   transform: rotate(180deg);
   filter: invert(1) !important;
   width: 48px;
   height: 48px;
 }
 
-.site-footer:hover .footer-content img {
+.site-footer:hover .next-project-content img {
   transform: rotate(-180deg);
   transition: transform 0.3s ease-in-out;
 }
 
-.site-footer:not(:hover) .footer-content img {
+.site-footer:not(:hover) .next-project-content img {
   transform: rotate(180deg);
   transition: transform 0.3s ease-in-out;
 }
 
+.contact-me-section {
+  gap: 80px;
+  padding: 160px;
+  background-color: black;
+  color: white;
+  font-size: 48px;
+  text-align: center;
+  width: 100vw !important;
+  margin: 0 !important;
+  align-items: center;
+}
 
+.contact-me-section p {
+  max-width: 900px;
+}
+
+.email-container {
+  padding: 24px 32px;
+  background-color: white;
+  color: black;
+  font-size: 40px;
+  text-align: center;
+}
+
+.email-container a {
+  color: inherit;
+  text-decoration: none;
+}
 
 
 
