--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="hidden">
+  <!--
   <div class="site-footer" id="next-project">
     <a href="#" id="next-project-link">
       <div class="footer-content">
@@ -11,6 +12,20 @@
       </div>
     </a>
   </div>
+-->
+
+  <div class="contact-me-section">
+    <div class="contact-me-text">
+      <h2 class="contact-me-title">MAGS</h2>
+      <h2 class="contact-me-title">FOLIO</h2>
+    </div>
+    <div class="email-container">
+      <div class="email-content">
+        <a href="mailto:maggieliujx@gmail.com" class="email-link">maggieliujx@gmail.com</a>
+      </div>
+    </div>
+  </div>
+
 </footer>
 
 <script>
