--- a/css/fonts.css
+++ b/css/fonts.css
@@ -23,37 +23,37 @@
 }
 
 @font-face {
-  font-family: 'SrabenGrotesk', sans-serif;
-  src: url('css/fonts/SrabenGrotesk-Black.otf') format('opentype');
-  src: url('css/fonts/SrabenGrotesk-Black.ttf') format('truetype');
+  font-family: 'SrabenGrotesk';
+  src: url('fonts/SrabenGrotesk-Black.otf') format('opentype');
+  src: url('fonts/SrabenGrotesk-Black.ttf') format('truetype');
   font-weight: 800;
 }
 
 @font-face {
-  font-family: 'SrabenGrotesk', sans-serif;
-  src: url('css/fonts/SrabenGrotesk-ExtraBold.otf') format('opentype');
-  src: url('css/fonts/SrabenGrotesk-ExtraBold.ttf') format('truetype');
+  font-family: 'SrabenGrotesk';
+  src: url('fonts/SrabenGrotesk-ExtraBold.otf') format('opentype');
+  src: url('fonts/SrabenGrotesk-ExtraBold.ttf') format('truetype');
   font-weight: 700;
 }
 
 @font-face {
-  font-family: 'SrabenGrotesk', sans-serif;
-  src: url('css/fonts/SrabenGrotesk-Bold.otf') format('opentype');
-  src: url('css/fonts/SrabenGrotesk-Bold.ttf') format('truetype');
+  font-family: 'SrabenGrotesk';
+  src: url('fonts/SrabenGrotesk-Bold.otf') format('opentype');
+  src: url('fonts/SrabenGrotesk-Bold.ttf') format('truetype');
   font-weight: 600;
 }
 
 @font-face {
-  font-family: 'SrabenGrotesk', sans-serif;
-  src: url('css/fonts/SrabenGrotesk-Semibold.otf') format('opentype');
-  src: url('css/fonts/SrabenGrotesk-SemiBold.ttf') format('truetype');
+  font-family: 'SrabenGrotesk';
+  src: url('fonts/SrabenGrotesk-Semibold.otf') format('opentype');
+  src: url('fonts/SrabenGrotesk-SemiBold.ttf') format('truetype');
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'SrabenGrotesk', sans-serif;
-  src: url('css/fonts/SrabenGrotesk-Medium.otf') format('opentype');
-  src: url('css/fonts/SrabenGrotesk-Medium.ttf') format('truetype');
+  font-family: 'SrabenGrotesk';
+  src: url('fonts/SrabenGrotesk-Medium.otf') format('opentype');
+  src: url('fonts/SrabenGrotesk-Medium.ttf') format('truetype');
   font-weight: 400;
 }
 
