--- a/css/style.css
+++ b/css/style.css
@@ -1227,7 +1227,7 @@ body.project-page .grid-col-12of12 {
   max-width: none !important;
   position: relative !important;
   overflow: hidden !important;
-  translate: ;
+
 }
 
 body.project-page .grid-col-12of12 img {
@@ -1641,6 +1641,12 @@ body.project-page .grid-col-9of12 .visual-grid > .project-image {
 
 
 .grid-col-4of12 img, video {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
+
+.grid-col-12of12 img, video {
   width: 100% !important;
   height: auto !important;
   display: block !important;
